...
      <CreateCustomerModal
        isOpen={showModal}
        setShowModal={setShowModal}
        populateCustomerList={populateCustomersList}
      />
      <Pressable
        testID="customers-open-create"
        style={styles.buttonContainer}
        onPress={openModal}
      >
        <Icon name="plus" size={20} />
      </Pressable>
    </View>
...
