...
            </Pressable>
          </View>
        </View>
      </Modal>
      <View style={headerWrapper}>
        <Text style={header}>
          {!isCourierFees ? "Itemized Breakdown" : "Calculated Courier Fees"}
        </Text>
      </View>
      {blockingLoadError ? null : showInitialLoad ? (
        <View style={statusContainer}>
          <Text style={status}>Loading data...</Text>
        </View>
...
